🐛 add some spacing to %section-wrapper to prevent content getting cut off

--- a/src/styles/utils/placeholders/_sectionWrapper.scss
+++ b/src/styles/utils/placeholders/_sectionWrapper.scss
@@ -4,10 +4,12 @@
   flex-direction: column;
   width: 100%;
   min-height: 100vh;
-  padding: 36px 0;
+  margin-top: -70px;
+  padding: 106px 0;
 
   @include desktop-view {
-    padding: 72px 0;
+    margin-top: -70px;
+    padding: 142px 0;
   }
 }
 
